# ProductSearcher

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  architecture-proposal.md  design-palette-preview.html  docker-compose.yml  product-vision.md
.ai/: ai.md  architecture.md  conventions.md  data-model.md  design-system.md  glossary.md  product.md
.github/workflows/: ci.yml
adr/: 0001-aquisicao-de-dados.md  0002-datastore-postgres-only.md  0003-monolito-modular.md  0004-deploy-free-tier.md  0005-decisoes-fase-2.md  0005-decisoes-tecnicas-fase-2.md  0006-licenciamento-busl.md  0007-pipeline-busca-retrieval-ranking.md  README.md  template.md
api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 71ab0046068d_add_search_indexes.py  7d5fdc583693_initial_schema.py  c1a2b3d4e5f6_schema_constraints.py
api/app/: main.py
api/app/ai/: __init__.py  service.py
api/app/catalog/: models.py  repository.py  router.py  schemas.py  tables.py
api/app/core/: config.py  db.py  logging.py
api/app/search/: comparison.py  intent.py  providers.py  ranking.py  repository.py  router.py  schemas.py
api/productsearcher_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: test_catalog.py  test_compare.py  test_health.py  test_intent.py  test_products.py  test_providers.py  test_ranking.py  test_relevance.py  test_search.py  test_search_repository.py
docs/: ProductSearcher-Kickoff.pptx  README.md  architecture.md  data-model.md  design-system.md  prd.md  use-cases.md  wireframes.md
frontend/: .env.example  .prettierignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: .gitkeep
frontend/src/lib/: api.ts
infra/: README.md  check_db.py
infra/deploy/: README.md  supabase.md
worker/: .env.example  Dockerfile  README.md  pyproject.toml
worker/ingestion/: __init__.py  load.py  models.py  pipeline.py  sources.py  validate.py
worker/productsearcher_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
worker/seed/: README.md  categories.example.json  categories.json
worker/seed/products/: headphones.yaml  notebooks.yaml
worker/tests/: test_load.py  test_ml_auth.py  test_normalize.py  test_seedbuilder.py  test_sources.py  test_validate.py
worker/tools/seedbuilder/: README.md  __init__.py  build_seed.py  config.py  mapping.py  ml_api.py  ml_auth.py  title_parser.py
