[project]
name = "productsearcher-worker"
version = "0.1.0"
description = "ProductSearcher — worker de ingestão do catálogo seed"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
